# smart-contract-analysis-tools-example

./: .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .solhint.json  Dockerfile  Dockerfile.hevm  Dockerfile.kevm  README.md  analysis-config.toml  foundry.toml  package.json  releaseDockerKevm.sh  remappings.txt
docker/: Dockerfile.analysisTools  Dockerfile.hevm  Dockerfile.kevm  README.md  releaseDockerAnalysisTools.sh  releaseDockerHevm.sh  releaseDockerKevm.sh
example-smart-contracts/: README.md
example-smart-contracts/SMTChecker/: README.md  VeriAuctionTokenForEth_problems-SMTChecker.result  VeriStake-SMTChecker.result  VeriToken-SMTChecker.result  run-SMTChecker-VeriStake.sh  run-SMTChecker.sh
example-smart-contracts/hevm/: README.MD  README.md  VeriToken-hevm.result  VeriToken-transfer-hevm.result  run-hevm-VeriState.sh  run-hevm.sh
example-smart-contracts/kevm/: README.md  VeriToken-approve-kevm-2.result  VeriToken-approve-kevm.result  VeriToken-bin-runtime.k  VeriToken-kevm-transfer.failing-result  (+9 more)
githooks/: pre-commit  pre-push
k-pl-tutorial/: README.md
k-tutorial/: README.md
kevm-specs/: VeriToken-spec.md
mythril-results-VeriAuctionTokenForEth_problems/: VeriAuctionTokenForEth_problems-Mythril.result  VeriAuctionTokenForEth_problems-graph-Mythril.html
security-scans/: .gitignore  README.md  package.json  report-VeriAuctionTokenForEth_problems.md  report-VeriToken.md  report.md
security-scans/report_generator/: Cargo.toml
security-scans/report_generator/src/: main.rs
test/: VeriAuctionTokenForEth_problems_setup.t.sol
(+149 files in other folders)
